--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "Set up AWS infrastructure using Serverless Framework",
   "dependencies": {},
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.1.1",
+    "@semantic-release/npm": "^7.0.6",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "@serverless/eslint-config": "^3.0.0",
     "eslint": "^7.9.0",
     "eslint-plugin-import": "^2.22.0",
@@ -38,6 +44,14 @@
     "url": "https://fluxaugur.dev"
   },
   "license": "GPL-3.0",
+  "private": true,
+  "files": [
+    "CHANGELOG.md",
+    "LICENSE",
+    "package.json",
+    "package-lock.json",
+    "README.md"
+  ],
   "eslintConfig": {
     "extends": "@serverless/eslint-config/node",
     "root": true
